Change to name without underscores and add figures

--- a/final.tex
+++ b/final.tex
@@ -68,6 +68,40 @@ In order to give the user an approximation about the impact of the story they ar
 \onecolumn
 \section{Appendix}
 
+\ref{screenshot:reader}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\linewidth]{img/Google-Reader.png}
+  \caption{Google Reader screenshot}
+  \label{screenshot:reader}
+\end{figure}
+
+\ref{screenshot:flipboard}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\linewidth]{img/flipboard-screenshot.png}
+  \caption{Flipboard screenshot}
+  \label{screenshot:flipboard}
+\end{figure}
+
+\ref{screenshot:timeline}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\linewidth]{img/timeline-item.png}
+  \caption{Timeline item in our application}
+  \label{screenshot:timeline}
+\end{figure}
+
+\ref{screenshot:coverage}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.9\linewidth]{img/media-coverage-polynomial.png}
+  \caption{Media coverage visualization (polynomial)}
+  \label{screenshot:coverage}
+\end{figure}
+
+
+
 % ***********************************************************************
 %                           SOME USEFUL EXAMPLES
 
