Add some more content

--- a/final.bib
+++ b/final.bib
@@ -34,3 +34,13 @@
   year={1987},
   publisher={Taylor \& Francis}
 }
+@techreport{kaidi,
+  title={Data visualization},
+  author={Zhao Kaidi},
+  institution={National University of Singapore}
+}
+@techreport{go,
+  title={Twitter Sentiment Classiﬁcation using Distant Supervision},
+  author={Alec Go, Richa Bhayani, Lei Huang},
+  author={Stanford University}
+}
