Add some text on evaluation

--- a/final.tex
+++ b/final.tex
@@ -75,7 +75,9 @@ Besides nice features our application also has some limitations. For example pic
 
 \subsection{Evaluation}
 
-How would you evaluate the success of your application (e.g. what metrics would you use, what would be an appropriate approach for evaluation and validation)?
+Evaluation is really important thing in application growth and development. As applications need to be as much friendly and attractive for users, they need to change and adapt over time. First thing would be to look at the users, which are coming back and compare them to new users. Percentage of coming back user would be a good statistic of successfull application overall. This could be easily done by using Google Analytics\footnote{https://www.google.com/analytics}.
+
+Also it would be nice to gather user's preferences and which articles he chooses to look at. It could be possible to analyze gathered data and make a list of most popular articles, and not so popular ones. By having this kind of information it would be possible to look at why people choose on article over another. It could be related with sentiments. It could be possible see if there are any patterns on sentiment analysis, which drives users to see one article over another.
 
 \subsection{Future work}
 
@@ -141,7 +143,7 @@ How would you improve and further develop your application design if time  and e
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\linewidth]{img/limitation-ZK.png}
-  \caption{Screenshot demonstrating our worst scenario of extracting photos}
+  \caption{Screenshot demonstrating scenario with photos from Bing, which are off topic}
   \label{screenshot:limitation}
 \end{figure}
 
